Join Logixal Page fixed on Mobile and Tablet Devices for Logixal Website.

--- a/css/style.css
+++ b/css/style.css
@@ -1399,6 +1399,13 @@ a.breadcrumb-item {
   }
 }
 
+/*JoinLogixal Page Accordion Fix */
+@media only screen and (min-width:380px) and (max-width: 566px) { 
+    
+    
+
+}
+
 @media only screen and (min-width:320px) and (max-width: 767px) {
   .glyphicon-minus:before, .glyphicon-plus:before {
     background: #c92d31;
